@@ -2,6 +2,8 @@
 
 * Fix logging of libdvdread to be less verbose, and output to stderr (bug #11,
   thanks to koorogi for reporting)
+* dvd_info: Add options for verbose and debugging output to display any errors
+  from libdvdread
 * Require libdvdread minimum version 6.1.0 for new DVD logging functionality
 * Fix segfault on creating md5sum of dvdread id on newer systems with gcc
   (bug #12, thanks to yzu1103309 for patch)
